argocd/kustomize/auth/spicedb-operator/spicedb/grpcRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: spicedb-grpc
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gateway
      namespace: istio-ingress
      sectionName: grpc

  rules:
    - matches:
        - method:
            service: authzed.api.v1.SchemaService
        - method:
            service: authzed.api.v1.PermissionsService
        - method:
            service: authzed.api.v1.WatchService
        - method:
            service: authzed.api.v1.ExperimentalService
      backendRefs:
        - name: shortlink
          port: 50051
